fix: The select arrow shouldn't be hidden behind objects anymore

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -258,6 +258,7 @@
 			height: 0.5em;
 			background-color: var(--select-arrow);
 			clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+			z-index: 10;
 		}
 	}
 
